# PANDA

./: README.md
Experiments/Computation_time/Benchmark_comparision/: panda_backward.m  tl_L_and_grad_u.c  tl_f_and_grad_u_theta.c  tl_hvp_f_u.c  tl_vjp_f_u_theta.c  train.m
Experiments/Compution_time/Adatpive_stepsize_validation/: PANDA_PANOC.m  PANDA_VS_PANOC.m  PANOC_PANDA_summary.csv
Experiments/Compution_time/Benchmark_comparison/: generate_target.m  panda.mexw64  panda_backward.m  panda_residual_log.csv  proximal_operator.m  tl_f_and_grad_u.c
Experiments/Memory_consumption/: README.md  train_acados_memory.py  train_casadi_memory.m  train_panda_memory.m
Experiments/Memory_consumption/safepdp/: benchmark_safe_pdp_memory.py
PANDA_SRC/: CMakeLists.txt  Matlab_install_windows.ps1
PANDA_SRC/Matlab/: arguments_check.c  arguments_check.h  arguments_parse.c  arguments_parse.h  panda.c  panda.h
PANDA_SRC/PANDA/: CMakeLists.txt  function_evaluator.c  function_evaluator.h  lbfgs.c  lbfgs.h  matrix_operations.c  matrix_operations.h  optimizer.c  panda.c  panda.h  panda_eval.c  panda_eval.h  panda_types.h
PANDA_SRC/globals/: globals.h
PANDA_SRC/include/: optimizer.h
Results_plot/: PANDA_PANOC_PLOT.m  PANDA_PANOC_RES.m  PANDA_RES_0.csv  PANDA_RES_SPIKE.csv  PANDA_VS_PANOC_PLOT.m  PANDA_VS_PANOC_RES.m  PANOC_PANDA_summary.csv  PANOC_RES_0.csv  PANOC_RES_SPIKE.csv  Plot_compution_time.m  Plot_loss.m  Plot_mini.m  Plot_mpc_traj.m  mpc_full_closed_loop_traj.mat  training_log_acados.csv  training_log_casadi.csv  training_log_panda.csv  training_log_safepdp.csv
(+16 files in other folders)
